# OBC-device-mvcam

./: CMakeLists.txt  README.md
mvcamsdk/: mvcamsdk.cmake
mvcamsdk/darwin/: README.md
mvcamsdk/darwin/include/: CameraDefine.h
mvcamsdk/darwin/lib/: libmvsdk.dylib
mvcamsdk/win32/Include/: CameraApi.h  CameraApiLoad.h  CameraDefine.H  CameraStatus.h
src/: MVCAMDescription.hpp  MVCAMDevice.cpp  MVCAMDevice.hpp  MVCAMStream.cpp  MVCAMStream.hpp  MVCAMThread.cpp  MVCAMThread.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  SettingsBaseWidget.hpp  StreamInterface.hpp  main.cpp  w_RemoteEditor.cpp  w_RemoteEditor.hpp  w_RemoteEditor.ui
src/widgets/: MVCAMFullSettingsWidget.cpp  MVCAMFullSettingsWidget.hpp  MVCAMFullSettingsWidget.ui  MVCAMStreamWidget.cpp  MVCAMStreamWidget.hpp  MVCAMStreamWidget.ui
